force-app/main/default/objects/Holiday__c/fields/First_Date_of_month__c.field-meta.xml
<CustomField>
    <fullName>First_Date_of_month__c</fullName>
    <formula>IF(

    MONTH( End_Date__c ) = 1,

    DATE(YEAR(End_Date__c ) - 1, 12, 01),

    DATE(YEAR(End_Date__c ), MONTH(End_Date__c ) - 1, 01)

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Date of month</label>
    <type>Date</type>
</CustomField>