force-app/main/default/objects/Holiday__c/fields/Last_Date_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Last_Date_of_Month__c</fullName>
    <formula>IF(MONTH( Start_Date__c )=12, DATE(YEAR( Start_Date__c ),12,31), DATE(YEAR( Start_Date__c ),MONTH( Start_Date__c )+1, 1)-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Date of Month</label>
    <type>Date</type>
</CustomField>