force-app/main/default/objects/Holiday__c/fields/Leave_Day_Dif_Month_Last__c.field-meta.xml
<CustomField>
    <fullName>Leave_Day_Dif_Month_Last__c</fullName>
    <formula>IF (AND( Start_Date__c &lt;&gt;  End_Date__c , month(Start_Date__c) &lt;&gt; month(End_Date__c), Start_Date__c &lt;&gt;  Last_Date_of_Month__c ),
IF(AND((5 - (CASE(MOD( Start_Date__c - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) &lt; (CASE(MOD(  Last_Date_of_Month__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) ),
((( Last_Date_of_Month__c  -   Start_Date__c ) + 1) &lt; 7)),
((CASE(MOD(  Last_Date_of_Month__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)) - (5 - (CASE(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)))),
(((FLOOR((( Last_Date_of_Month__c  -  Start_Date__c ) - (CASE(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 6, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0))) / 7)) * 5) +
(CASE(MOD(  Start_Date__c  - DATE(1900, 1, 6), 7), 0, 0, 1, 5, 2, 5, 3, 4, 4, 3, 5, 2, 6, 1, 0)) +
(CASE(MOD(  Last_Date_of_Month__c - DATE(1900, 1, 6), 7), 0, 0, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 6, 5, 0)))), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Day (Dif Month Last)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>