force-app/main/default/objects/Holiday__c/fields/Leave_Day_Dif_Month_Single_Start__c.field-meta.xml
<CustomField>
    <fullName>Leave_Day_Dif_Month_Single_Start__c</fullName>
    <formula>IF (AND( Start_Date__c &lt;&gt; End_Date__c , month(Start_Date__c) &lt; month(End_Date__c), End_Date__c =  First_Date_of_month__c ), 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Day (Dif Month Single Start)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>