force-app/main/default/objects/Holiday__c/fields/Leave_Day_Single_Day__c.field-meta.xml
<CustomField>
    <fullName>Leave_Day_Single_Day__c</fullName>
    <formula>If ( Start_Date__c =  End_Date__c , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Day (Single Day)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>