force-app/main/default/objects/Holiday__c/fields/LeaveDayDifMonthSingleLast__c.field-meta.xml
<CustomField>
    <fullName>LeaveDayDifMonthSingleLast__c</fullName>
    <formula>IF (AND( Start_Date__c &lt;&gt;  End_Date__c , month(Start_Date__c) &lt; month(End_Date__c), Start_Date__c =  Last_Date_of_Month__c), 1, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Leave Day (Dif Month Single Last)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>