force-app/main/default/objects/Holiday__c/fields/Month_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Month_Start_Day__c</fullName>
    <formula>Month ( Start_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Start Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>