force-app/main/default/objects/Holiday__c/fields/Year_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Year_End_Date__c</fullName>
    <formula>Text (Year ( End_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year End Date</label>
    <type>Text</type>
</CustomField>