force-app/main/default/objects/Holiday__c/fields/Year_Start_Day__c.field-meta.xml
<CustomField>
    <fullName>Year_Start_Day__c</fullName>
    <formula>Text (Year ( Start_Date__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Start Day</label>
    <type>Text</type>
</CustomField>