force-app/main/default/objects/Holiday__c/validationRules/Holiday_Date_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Holiday_Date_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>OR 
(
 YEAR( Start_Date__c )  &lt; YEAR(TODAY()),
 YEAR(End_Date__c) &lt; YEAR(TODAY()),
 Start_Date__c &gt; End_Date__c
)</errorConditionFormula>
    <errorMessage>Date invalid! Please input again!</errorMessage>
</ValidationRule>